# chess_trainer

./: .gitignore  Cargo.toml  README.md
py/: pgn_to_db.py  shuffle.py  test.py
src/: create_dataset.rs  dataloader.rs  main.rs  play.rs  sqlite_dataset.rs  test.rs  train.rs  util.rs
