[package]
name = "chess_trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
nevermind-neu = { git = "https://github.com/regular-dev/nevermind-neu.git" }
clap = { version = "3.2.22" }
pleco = { git = "https://github.com/pleco-rs/Pleco.git" }
rand = { version = "0.8.5" }
env_logger = { version = "0.9.0" }
log = { version = "0.4", features = ["release_max_level_info"]  }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.29.0" } # features = ["bundled"]


ndarray = { version = "0.15.0", features = [ "rayon"] }
ndarray-rand = "0.14.0"
